# irc-push-function

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.adoc  host.json
src/functions/: mod.rs  webhook.rs
