[package]
name = "irc-push"
version = "0.1.0"
authors = ["tyler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-functions = "0.11.0"
irc = "~0.13.6"
log = "~0.4.8"
pretty_env_logger = "~0.3.1"

# Needed for deserializing objects
serde = "~1.0.103"
serde_json = "~1.0.0"
